--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Plataforma de recomendação de podcasts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "url": "https://github.com/Gleider/podcast-plataform/issues"
   },
   "homepage": "https://github.com/Gleider/podcast-plataform#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
+  }
 }
