--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/Gleider/podcast-plataform#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "webpack": "^4.5.0"
   }
 }
