--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "API to search podcasts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "build": "./node_modules/.bin/webpack"
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
+    "test:tdd": "npm test -- --require babel-register --watch",
+    "test:coverage": "nyc npm test"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
-    "mocha": "^5.1.0"
+    "mocha": "^5.1.0",
+    "nyc": "^11.6.0"
   }
 }
