--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
-    "test:tdd": "npm test -- --require babel-register --watch",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
     "test:coverage": "nyc npm test"
   },
   "repository": {
@@ -26,13 +26,23 @@
   },
   "homepage": "https://github.com/Gleider/podcast-plataform#readme",
   "devDependencies": {
-    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
+    "gulp-babel": "^7.0.1",
     "husky": "^0.14.3",
     "mocha": "^5.1.0",
     "nyc": "^11.6.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "eslint-plugin-mocha": "^5.0.0",
+    "webpack": "^4.5.0"
   }
 }
