--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register -w",
     "test:coverage": "nyc npm test",
-    "coveralls": "nyc npm test && nyc report --reporter-text-lcov | coveralls"
+    "coveralls": "npm run test:coverage && nyc report --reporter-text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
