--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "podcast-search",
   "version": "1.0.1",
   "description": "API to search podcasts",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "clear": "rimraf lib",
     "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
@@ -21,6 +21,10 @@
     "type": "git",
     "url": "git+https://github.com/Gleider/podcast-search.git"
   },
+  "files": [
+    "dist",
+    "lib"
+  ],
   "nyc": {
     "reporter": [
       "text",
