--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "podcast-search",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "API to search podcasts",
-  "main": "lib/index.js",
+  "main": "lib/search.js",
   "scripts": {
     "clear": "rimraf lib",
     "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
@@ -57,16 +57,16 @@
     "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.0",
-    "node-fetch": "^2.1.2",
     "nyc": "^11.6.0",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "sinon-stub-promise": "^4.0.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "node-fetch": "^2.1.2",
     "npm": "^6.0.0"
   }
 }
